#416 Text UI fix for El dark mode

--- a/assets/css/sk-main.css
+++ b/assets/css/sk-main.css
@@ -628,6 +628,11 @@
 	font-family: inherit;
 	font-weight: inherit;
 }
+
+#analogwp-templates .analogwp-content .inner-popup-content .flex-row [type=text]{
+    background-color: #fff;
+    color: #32373c;
+}
 /*END*/
 
 /*Clone Admin CSS in elementor stylekit AnalogWP Template widget modal*/
